# ChangeLog for app-emacs/yasnippet
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/yasnippet/ChangeLog,v 1.4 2009/01/29 01:05:53 fauli Exp $

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -yasnippet-0.5.7.ebuild:
  clean up

*yasnippet-0.5.8 (16 Jan 2009)

  16 Jan 2009; Ulrich Mueller <ulm@gentoo.org> -yasnippet-0.5.5.ebuild,
  +yasnippet-0.5.8.ebuild:
  Version bump, bug 255146. Remove old.

*yasnippet-0.5.7 (14 Dec 2008)

  14 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +yasnippet-0.5.7.ebuild:
  Version bump, bug 250667.

*yasnippet-0.5.5 (19 Jun 2008)

  19 Jun 2008; Ulrich Mueller <ulm@gentoo.org> +files/50yasnippet-gentoo.el,
  +metadata.xml, +yasnippet-0.5.5.ebuild:
  Initial import, from Emacs overlay. Ebuild contributed by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>, bug 214667.
