@@ -3,14 +3,17 @@ Hash: SHA1
 
 AUX 50yasnippet-gentoo.el 249 RMD160 b28496f99abad7795b8dbedd799b0b46c3acc3e8 SHA1 6b1a238ad05aa75633143e37b646d5fbfde2099d SHA256 36aedd7a123c4228fcbe2bce95989baf02b35bb60b299a17c9ad6c554c76fa51
 DIST yasnippet-0.5.8.tar.bz2 29933 RMD160 531b70f5bd69fe97c7dc67062eff6e9d139cfc1e SHA1 f1b02e98aed48e001fd15b57c41a1b0c48eebc2b SHA256 69240c71245966ccc5c8716cc11b0d78eda83b36d5b7200bce9b18eaabf7af85
+DIST yasnippet-0.5.9.tar.bz2 30004 RMD160 eccf6829c7d2c6fee5bbfe646af4a12bbb0121a8 SHA1 12f03f02e74cd2d76e12252fc542e36fd16e0da4 SHA256 0cf996ff9cfd47d9d273df11deef707338170297a8c2dae6ab877c9355dc2444
 DIST yasnippet-doc-0.5.8.tar.bz2 108029 RMD160 cc21701825aa6cc885ddef87e4c60d2d2439c650 SHA1 bf347812f828617880b93080767ed245182db260 SHA256 7fe3da9f65b61325591ce405f0d05def1beb63dfdcdc90d513533560670cf42d
+DIST yasnippet-doc-0.5.9.tar.bz2 108029 RMD160 cc21701825aa6cc885ddef87e4c60d2d2439c650 SHA1 bf347812f828617880b93080767ed245182db260 SHA256 7fe3da9f65b61325591ce405f0d05def1beb63dfdcdc90d513533560670cf42d
 EBUILD yasnippet-0.5.8.ebuild 1242 RMD160 d717c39859266c0cc181431d3d62caf4226a8278 SHA1 81d718418c9dcb9394efa9478074f4dd7a7a8d7f SHA256 49fd61196b585ba5a760b7356326c79b2f0eb5abff74eada3a1e601a21766ac7
-MISC ChangeLog 886 RMD160 b3d10d51dad7a9702f0220950f896d60d4a84b7f SHA1 7feb58d811cbe156d51a349b44f967ab8559df8e SHA256 7129be89fba1e0aafa6803b902f55f21d73a6c2d2ab2d01b579129fae67db66d
+EBUILD yasnippet-0.5.9.ebuild 1242 RMD160 85d72517c4473c4c61baf6336f9d4341bf0ed040 SHA1 04fd72abbb52b7fe9df6338010d61877d82ef34b SHA256 4879aea09c148624526189b8142e601e809ba9bec88857a12c3541cf19cabd1e
+MISC ChangeLog 1017 RMD160 3cfcc16efdf79398d285b243bee8fbf0942c6bed SHA1 a8e547021cc2273eb26460c9b4e1e30b216f551d SHA256 c6f7fc7bd09923854e993d4593aa9ecc42b1c6fbd22777438724fd9d168a161c
 MISC metadata.xml 312 RMD160 5d9cc87a75757e5eecdf006020538f38ca84ce65 SHA1 5a34cfccb600d05758fad3a395c9936483c2bde9 SHA256 496b704992e6a3a34d1a4ad6090b1e4e7d6c0f968e049f3f509f362f9eeef537
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAkmBAQYACgkQNQqtfCuFneNoNwCfQROVsQX1XxLRKIE4WQjgn/LF
-wm4An2xOJvI2NtK7GPzG0ku2FMnBJQ9a
-=FBH0
+iEYEARECAAYFAkmQMXQACgkQOeoy/oIi7uzmEACbBd0mnYSWcWLbUy/7tTCAdptz
+kR8AoM6zUe046vEFvzTH154pWyUwNuFo
+=kbtv
 -----END PGP SIGNATURE-----
